[package]
authors = ["wangxinyu <comicfans44@gmail.com>"]
edition = "2018"
name = "unarr"
version = "0.1.0"

[dependencies.codepage-437]
optional = true
version = "*"

[dependencies.chardet]
optional = true
version = "*"

[dependencies.encoding]
optional = true
version = "*"

[dependencies.unarr_sys]
git = "https://github.com/comicfans/unarr_sys.git"

[dev-dependencies]
rand = "0.6.*"

[features]
default = ["chardet", "encoding", "codepage-437"]
no_guessing = []
